# ComplianceKit

./: .env.example  .gitignore  CODEOWNERS  DEVLOG.md  KNOWN_ISSUES.md  Makefile  README.md  commitlint.config.cjs  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/: pull_request_template.md
docs/: ARCHITECHTURE.md  SCHEMA.md  ai_act_content_corrections.md  article_audit_ai_act.md  article_audit_gdpr.md  article_audit_nis2.md  data_requirements_summary.md  db_rules_profile_fields.md  nis2_content_corrections.md  nis2_full_renumber_map.md
dsar-workflow/: package.json
frontend/: next.config.ts  package.json  railway.toml  (+2 more)
services/api-gateway/: Dockerfile  pyproject.toml  railway.toml
services/api-gateway/app/: config.py  main.py
services/api-gateway/app/api/v1/: router.py
services/api-gateway/app/api/v1/endpoints/: health.py  profile.py  tools.py  webhooks.py
services/api-gateway/app/api/v1/schemas/: profile.py  tool.py
services/api-gateway/tests/: conftest.py  test_profile.py  test_tools.py  test_webhooks.py
services/policy-engine/: Dockerfile  pyproject.toml  railway.toml
services/policy-engine/app/: config.py  main.py
services/policy-engine/app/engine/: applicability.py  compliance_report_generator.py  embeddings.py  evidence_evaluator.py  markdown_blocks.py  pdf_generator.py  policy_docx_generator.py  policy_generator.py  policy_pdf_generator.py  policy_templates.py  processor_generator.py  remediation.py  ropa_generator.py  scorer.py
services/policy-engine/app/routers/: assessments.py  breach.py  dpo_assistant.py  dsar.py  evidence.py  policies.py  processors.py  regulations.py  reports.py  ropa.py
services/policy-engine/app/workers/: assessment.py
services/policy-engine/tests/: conftest.py  test_assessments.py  test_breach.py  test_dpo_assistant.py  test_dsar.py  test_embeddings.py  test_engine.py  test_evidence.py  test_policies.py  test_policy_export.py  test_processor_generator.py  test_processors.py  test_regulations.py  test_reports.py  test_ropa_generator.py
(+155 files in other folders)
