[project]
name = "policy-engine"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "arq>=0.26.0",
    "common",
    "reportlab>=4.5.1",
    "python-docx>=1.2.0",
    "pypdf>=4.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
]

[tool.uv.sources]
common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
pythonpath = ["."]
